tests/snapshots/cmd_add__add_invalid_ref.snap
---
source: tests/cmd_add.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x invalid action reference: expected `owner/repo`, got: invalid
