tests/snapshots/cmd_add__add_no_actions.snap
---
source: tests/cmd_add.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x no actions specified
