tests/snapshots/cmd_add__add_no_lockfile.snap
---
source: tests/cmd_add.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x lockfile not found: .github/ghat/ghat.lock
  | 
  | Run `ghat init` first to initialize the project.
