tests/snapshots/cmd_add__cmd_add::add_duplicate_skipped-output.snap
---
source: tests/cmd_add.rs
expression: value
---
exit_code: 0
---stderr---
skipped actions/checkout (already in lockfile)
