tests/snapshots/cmd_add__cmd_add::add_exact_version-diff.snap
---
source: tests/cmd_add.rs
expression: value
---
--- a/.github/ghat/ghat.lock
+++ b/.github/ghat/ghat.lock
@@ -0,0 +1 @@
+actions/checkout v4.2.1 b4ffde65f46336ab88eb53be808477a3936bae11
