tests/snapshots/cmd_add__cmd_add::add_exact_version-output.snap
---
source: tests/cmd_add.rs
expression: value
---
exit_code: 0
---stderr---
added actions/checkout v4.2.1 (b4ffde65f463)
