tests/snapshots/cmd_add__cmd_add::add_multiple_actions-diff.snap
---
source: tests/cmd_add.rs
expression: value
---
--- a/.github/ghat/ghat.lock
+++ b/.github/ghat/ghat.lock
@@ -0,0 +1,2 @@
+Swatinem/rust-cache v2.7.8 9d47c6ad4b02e050fd481d890b2ea34778fd09d6
+actions/checkout v4.2.2 11bd71901bbe5b1630ceea73d27597364c9af683
